# Magic_block

./: Anchor.toml
programs/trading-game/: Cargo.toml
programs/trading-game/src/: error.rs  event.rs  lib.rs
programs/trading-game/src/helpers/: calculate_portfolio_value.rs  calculate_roi.rs  mod.rs
programs/trading-game/src/instructions/: checkpoint_accounts.rs  close_session.rs  delegate_trading_accounts.rs  execute_order.rs  finalize_trading_accounts.rs  initialize_session.rs  join_session.rs  mod.rs  update_leaderboard.rs  update_pnl.rs
programs/trading-game/src/state/: state.rs
tests/: trading-game.ts
