[package]
name = "trading-game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { version = "0.3.6", features = ["anchor"] }
pyth-solana-receiver-sdk = "1.0.1"

